Suppress the automatic generation for an ambiguous password field.

When there are saved credentials on the page we should suggest them on any
password field. If the field is eligible for generation we append it to the end
of the suggestions.
A screenshot is attached in the bug.

Bug: 859495
Change-Id: I614faa89037074345794cd4107c8801f715142f4
Reviewed-on: https://chromium-review.googlesource.com/1140718
Reviewed-by: Vaclav Brozek <vabr@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576116}
Former-commit-id: ff2b64b9500baff6f24d69d91e7bcc6505a745dd